objects/POD__c.object
<CustomObject>
    <description>Proof of Delivery</description>
    <fields>
        <fullName>Link_to_PDF__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/api/match_service/download_pod?token=uvmHFm-pPZ8hbA&amp;filename=&quot; + POD_ID__c,&quot;Download PDF&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_ID__c</fullName>
        <formula>Match_Record__r.Match_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Match ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Record__c</fullName>
        <label>Match Record</label>
        <referenceTo>Match_Record__c</referenceTo>
        <relationshipLabel>PODs</relationshipLabel>
        <relationshipName>PODs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordering_Physician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordering Physician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PODs</relationshipLabel>
        <relationshipName>PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Practice_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordering Practice Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PODs (Practice Name)</relationshipLabel>
        <relationshipName>PODs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Practice_Site_Type__c</fullName>
        <label>Ordering Practice Site Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Delivery_Date__c</fullName>
        <label>POD Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POD_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>POD ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pharma_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PODs</relationshipLabel>
        <relationshipName>PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Name</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>PODs</relationshipLabel>
        <relationshipName>PODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POD</label>
    <listViews>
        <fullName>PODs</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Match_ID__c</columns>
        <columns>Match_Record__c</columns>
        <columns>Link_to_PDF__c</columns>
        <columns>POD_Delivery_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>PODs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>POD-{0000}</displayFormat>
        <label>POD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PODs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>